<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GovernanceActivity">

    <LinearLayout
        android:id="@+id/taskbar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:background="@drawable/rounded_rectangle_card">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/back"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="0dp">

            <RelativeLayout
                android:id="@+id/relativelayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/picture"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="0dp"
                    android:layout_gravity="center"
                    android:src="@drawable/info"
                    android:background="@drawable/background"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hierarchy Of Academic Governance"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Info on Academic Governance"
                    android:textColor="#fff"
                    android:textSize="13sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp">

                </TextView>

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/page1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hierarchy"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/page2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/page2"
            android:visibility="gone"/>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/box1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="60dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/right"
            android:background="#C8C8C8" />


    </RelativeLayout>

    <RelativeLayout
    android:id="@+id/box2"
    android:layout_width="40dp"
    android:layout_height="40dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginBottom="60dp"
    android:visibility="gone">

    <ImageView
        android:id="@+id/left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/left"
        android:background="#a1a1a1"
        />


</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>