...
            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"
...
                        android:textSize="18sp" />-->

                    <Spinner
                        android:id="@+id/faculty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:spinnerMode="dropdown"
                        android:backgroundTint="#fff"
                        android:foregroundTint="#fff"
                        android:theme="@style/Base.DialogWindowTitle.AppCompat" />


                </LinearLayout>
...
