...
    <item
        android:id="@+id/governance"
        android:title="Hierarchy Of Academic Governance"
        android:visible="true" />

    <item
        android:id="@+id/content"
        android:title="Attendance Rule For Faculties"
        android:visible="true" />

    <item
        android:id="@+id/settings"
        android:title="Curricula For Faculties"
...
