...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginBottom="20dp">

<LinearLayout
    android:id="@+id/taskbar"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_rectangle_card">

...
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >

    <ImageView
        android:id="@+id/dropdown"
        android:layout_width="0dp"
        android:layout_weight="0.1"
        android:layout_height="40dp"
        android:src="@drawable/options"
        android:padding="4dp"/>

    <EditText
        android:id="@+id/edtSearch"
        android:layout_width="0dp"
        android:layout_weight="0.8"
        android:layout_height="42dp"
        android:backgroundTint="#fff"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/get_search"
        android:layout_width="0dp"
        android:layout_weight="0.1"
        android:layout_height="40dp"
        android:src="@drawable/search"
        android:padding="5dp"/>

...
        app:layout_constraintLeft_toLeftOf="parent"
        />



    <HorizontalScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbars="none">
...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/science"
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
...



        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/commerce"
        android:layout_width="120dp"
        android:layout_height="160dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintLeft_toRightOf="@id/science"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="12dp"
...



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/engineering"
        android:layout_width="120dp"
        android:layout_height="160dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintLeft_toRightOf="@id/commerce"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="12dp"
...



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/health"
        android:layout_width="120dp"
        android:layout_height="160dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintLeft_toRightOf="@id/engineering"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="12dp"
...




    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/humanity"
        android:layout_width="120dp"
        android:layout_height="160dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintLeft_toRightOf="@id/health"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="12dp"
...
            android:layout_marginTop="80dp"
            android:layout_marginBottom="-12dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/humanities"
                android:layout_gravity="center"
                android:gravity="center"/>

        </LinearLayout>


...
