...
        app:layout_constraintTop_toBottomOf="@id/taskbar"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="7dp">

        <ListView
            android:id="@+id/health_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ></ListView>


    </LinearLayout>
...
