...
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="121dp">

        <ListView
            android:id="@+id/science_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            ></ListView>


...
